--- a/index.html
+++ b/index.html
@@ -22,14 +22,29 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    Improve your front-end skills by building projects Scan the QR code to visit
-    Frontend Mentor and take your coding skills to the next level
+    <div class="card">
+      <div class="card__image">
+        <img src="images/image-qr-code.png" alt="qr-code image" />
+      </div>
+      <div class="card__body">
+        <h2 class="card__title">
+          Improve your front-end skills by building projects
+        </h2>
+
+        <div class="card__content">
+          <p>
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
+      </div>
+    </div>
 
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="https://github.com/JohnMwendwa">John Mwendwa</a>.
     </div>
   </body>
 </html>
