add landmarks to improve accessibility

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
+    <meta name="description" content="QR code component" />
     <link
       rel="icon"
       type="image/png"
@@ -22,14 +22,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="card">
+    <main class="card">
       <div class="card__image">
         <img src="images/image-qr-code.png" alt="qr-code image" />
       </div>
       <div class="card__body">
-        <h2 class="card__title">
+        <h1 class="card__title">
           Improve your front-end skills by building projects
-        </h2>
+        </h1>
 
         <div class="card__content">
           <p>
@@ -38,13 +38,13 @@
           </p>
         </div>
       </div>
-    </div>
+    </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="https://github.com/JohnMwendwa">John Mwendwa</a>.
-    </div>
+    </footer>
   </body>
 </html>
